# lion-core

./: .gitignore  .pre-commit-config.yaml  README.md  lion_knowledge_graph.html  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql-analysis.yml  pc_check.yml  release.yml
api_references/: agentic_operations.ipynb  test_ops.ipynb
dev_tool/: count_codebase_lines.py  count_test_lines.py
lion_core/: __init__.py  _class_registry.py  class_registry.py  converter.py  element.py  exceptions.py  log_manager.py  pile_adapter.py  pile_loader.py  setting.py  sys_util.py  sys_utils.py  util.py
lion_core/_abc/: __init__.py  characteristic.py  concept.py  container.py  event.py  observer.py
lion_core/abc/: README.md  __init__.py  _characteristic.py  _concept.py  _observation.py  _observer.py  _record.py  _space.py  characteristic.py  concept.py  concepts.py  container.py  element.py  event.py  exceptions.py  ideas.txt  observation.py  observer.py  operable.py  probabilistic.py  quantum.py  record.py  space.py  tao.py
lion_core/abstracts/: concepts.py  exceptions.py
lion_core/action/: README.md  __init__.py  action_executor.py  action_processor.py  action_queue.py  base.py  function_calling.py  manual.py  status.py  tool.py  tool_manager.py
lion_core/communication/: __init__.py  action_request.py  action_response.py  assistant_response.py  base.py  base_mail.py  instruction.py  mail.py  mail_manager.py  message.py  package.py  readme.md  start_mail.py  system.py  util.py  utils.py
lion_core/container/: _pile_loader.py  base.py  container.py  exchange.py  flow.py  pile.py  pile_loader.py  progression.py  record.py  util.py
lion_core/experimental/: flow.py  log.py  log_manager.py  pile_loader.py  report.py  rule_manager.py  rulebook.py  task_manager.py
lion_core/form/: base.py  form.py  form_manager.py  report.py  report_manager.py  util.py  utils.py
lion_core/generic/: __init__.py  base.py  base_hyper_edge.py  component.py  component_adapter.py  component_converter.py  converter_registry.py  edge.py  edge_condition.py  element.py  exchange.py  flow.py  form.py  graph.py  hyperedge.py  log.py  node.py  note.py  pile.py  progression.py  readme.md  relation.py  tree.py  tree_node.py  util.py  utils.py
lion_core/graph/: edge.py  edge_condition.py  graph.py  hypergraph.py  node.py  relation_manager.py  tree.py
lion_core/imodel/: expert_model.py  imodel.py  model_manager.py
lion_core/knowledge/: knowledge_base.py
lion_core/libs/: __init__.py  _helper.py  sys_util.py  sys_utils.py  system_utility.py
lion_core/log/: base.py  base_log.py  d_log.py  data_logger.py  inference_log.py  log_manager.py  new_base.py  record.py  rule_logger.py  work.py
lion_core/operable/: __init__.py
lion_core/operative/: action_model.py  operative.py  reason_model.py  step_model.py  utils.py
lion_core/operator/: base.py
resources/: readings.md
tests/: test_parsing.py
(+375 files in other folders)
